--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.19",
+    "@vuepress/plugin-search": "^2.0.0-rc.73",
     "@vuepress/theme-default": "^2.0.0-rc.70",
     "sass-embedded": "^1.83.4",
     "vuepress": "^2.0.0-rc.19"
