Update .gitignore to exclude VitePress and node_modules
Added entries to ignore VitePress build and cache directories located under /docs, as well as the /node_modules/ directory. This helps keep unnecessary files out of version control.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 # VuePress default build output directory
 .vuepress/dist
 /.idea/magento2plugin.xml
+/docs/.vitepress/dist/
+/docs/.vitepress/cache/
+
+/node_modules/
